--- a/content/projects/tidyverse_functions/index.html
+++ b/content/projects/tidyverse_functions/index.html
@@ -92,7 +92,7 @@ DT::datatable(parsed_tweets)</code></pre>
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#zlyhuqxuej .gt_table {
+#hgysoquvyy .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -117,7 +117,7 @@ DT::datatable(parsed_tweets)</code></pre>
   border-left-color: #D3D3D3;
 }
 
-#zlyhuqxuej .gt_heading {
+#hgysoquvyy .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -129,7 +129,7 @@ DT::datatable(parsed_tweets)</code></pre>
   border-right-color: #D3D3D3;
 }
 
-#zlyhuqxuej .gt_title {
+#hgysoquvyy .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -139,7 +139,7 @@ DT::datatable(parsed_tweets)</code></pre>
   border-bottom-width: 0;
 }
 
-#zlyhuqxuej .gt_subtitle {
+#hgysoquvyy .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -149,13 +149,13 @@ DT::datatable(parsed_tweets)</code></pre>
   border-top-width: 0;
 }
 
-#zlyhuqxuej .gt_bottom_border {
+#hgysoquvyy .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#zlyhuqxuej .gt_col_headings {
+#hgysoquvyy .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -170,7 +170,7 @@ DT::datatable(parsed_tweets)</code></pre>
   border-right-color: #D3D3D3;
 }
 
-#zlyhuqxuej .gt_col_heading {
+#hgysoquvyy .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -190,7 +190,7 @@ DT::datatable(parsed_tweets)</code></pre>
   overflow-x: hidden;
 }
 
-#zlyhuqxuej .gt_column_spanner_outer {
+#hgysoquvyy .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -202,15 +202,15 @@ DT::datatable(parsed_tweets)</code></pre>
   padding-right: 4px;
 }
 
-#zlyhuqxuej .gt_column_spanner_outer:first-child {
+#hgysoquvyy .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#zlyhuqxuej .gt_column_spanner_outer:last-child {
+#hgysoquvyy .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#zlyhuqxuej .gt_column_spanner {
+#hgysoquvyy .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -222,7 +222,7 @@ DT::datatable(parsed_tweets)</code></pre>
   width: 100%;
 }
 
-#zlyhuqxuej .gt_group_heading {
+#hgysoquvyy .gt_group_heading {
   padding: 8px;
   color: #333333;
   background-color: #FFFFFF;
@@ -244,7 +244,7 @@ DT::datatable(parsed_tweets)</code></pre>
   vertical-align: middle;
 }
 
-#zlyhuqxuej .gt_empty_group_heading {
+#hgysoquvyy .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -259,15 +259,15 @@ DT::datatable(parsed_tweets)</code></pre>
   vertical-align: middle;
 }
 
-#zlyhuqxuej .gt_from_md > :first-child {
+#hgysoquvyy .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#zlyhuqxuej .gt_from_md > :last-child {
+#hgysoquvyy .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#zlyhuqxuej .gt_row {
+#hgysoquvyy .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -286,7 +286,7 @@ DT::datatable(parsed_tweets)</code></pre>
   overflow-x: hidden;
 }
 
-#zlyhuqxuej .gt_stub {
+#hgysoquvyy .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -298,7 +298,7 @@ DT::datatable(parsed_tweets)</code></pre>
   padding-left: 12px;
 }
 
-#zlyhuqxuej .gt_summary_row {
+#hgysoquvyy .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -308,7 +308,7 @@ DT::datatable(parsed_tweets)</code></pre>
   padding-right: 5px;
 }
 
-#zlyhuqxuej .gt_first_summary_row {
+#hgysoquvyy .gt_first_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -318,7 +318,7 @@ DT::datatable(parsed_tweets)</code></pre>
   border-top-color: #D3D3D3;
 }
 
-#zlyhuqxuej .gt_grand_summary_row {
+#hgysoquvyy .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -328,7 +328,7 @@ DT::datatable(parsed_tweets)</code></pre>
   padding-right: 5px;
 }
 
-#zlyhuqxuej .gt_first_grand_summary_row {
+#hgysoquvyy .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -338,11 +338,11 @@ DT::datatable(parsed_tweets)</code></pre>
   border-top-color: #D3D3D3;
 }
 
-#zlyhuqxuej .gt_striped {
+#hgysoquvyy .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#zlyhuqxuej .gt_table_body {
+#hgysoquvyy .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -351,7 +351,7 @@ DT::datatable(parsed_tweets)</code></pre>
   border-bottom-color: #D3D3D3;
 }
 
-#zlyhuqxuej .gt_footnotes {
+#hgysoquvyy .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -365,13 +365,13 @@ DT::datatable(parsed_tweets)</code></pre>
   border-right-color: #D3D3D3;
 }
 
-#zlyhuqxuej .gt_footnote {
+#hgysoquvyy .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding: 4px;
 }
 
-#zlyhuqxuej .gt_sourcenotes {
+#hgysoquvyy .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -385,46 +385,46 @@ DT::datatable(parsed_tweets)</code></pre>
   border-right-color: #D3D3D3;
 }
 
-#zlyhuqxuej .gt_sourcenote {
+#hgysoquvyy .gt_sourcenote {
   font-size: 90%;
   padding: 4px;
 }
 
-#zlyhuqxuej .gt_left {
+#hgysoquvyy .gt_left {
   text-align: left;
 }
 
-#zlyhuqxuej .gt_center {
+#hgysoquvyy .gt_center {
   text-align: center;
 }
 
-#zlyhuqxuej .gt_right {
+#hgysoquvyy .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#zlyhuqxuej .gt_font_normal {
+#hgysoquvyy .gt_font_normal {
   font-weight: normal;
 }
 
-#zlyhuqxuej .gt_font_bold {
+#hgysoquvyy .gt_font_bold {
   font-weight: bold;
 }
 
-#zlyhuqxuej .gt_font_italic {
+#hgysoquvyy .gt_font_italic {
   font-style: italic;
 }
 
-#zlyhuqxuej .gt_super {
+#hgysoquvyy .gt_super {
   font-size: 65%;
 }
 
-#zlyhuqxuej .gt_footnote_marks {
+#hgysoquvyy .gt_footnote_marks {
   font-style: italic;
   font-size: 65%;
 }
 </style>
-<div id="zlyhuqxuej" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
+<div id="hgysoquvyy" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
   
   <thead class="gt_col_headings">
     <tr>
