--- a/content/projects/tidyverse_functions/index.html
+++ b/content/projects/tidyverse_functions/index.html
@@ -56,15 +56,13 @@ parsed_tweets &lt;- tweets %&gt;%
 
 write_csv(parsed_tweets, file = &quot;cleaned_tweets_incomplete.csv&quot;)
 
-knitr::kable(parsed_tweets[1:10,])</code></pre>
+knitr::kable(parsed_tweets[1:10,-c(5:6)])</code></pre>
 <table>
 <colgroup>
+<col width="8%" />
+<col width="6%" />
 <col width="5%" />
-<col width="4%" />
-<col width="3%" />
-<col width="54%" />
-<col width="17%" />
-<col width="15%" />
+<col width="80%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -72,8 +70,6 @@ knitr::kable(parsed_tweets[1:10,])</code></pre>
 <th align="left">user</th>
 <th align="left">funcs</th>
 <th align="left">text</th>
-<th align="left">reply</th>
-<th align="left">parent_thread</th>
 </tr>
 </thead>
 <tbody>
@@ -82,80 +78,60 @@ knitr::kable(parsed_tweets[1:10,])</code></pre>
 <td align="left">NathanKhadaroo</td>
 <td align="left">expand_grid()</td>
 <td align="left">tidyr::expand_grid() is really useful for creating new datasets to see how fitted models perform on new data!</td>
-<td align="left"><a href="https://twitter.com/NathanKhadaroo/status/1334153550486769665" class="uri">https://twitter.com/NathanKhadaroo/status/1334153550486769665</a></td>
-<td align="left"><a href="https://twitter.com/tladeras/status/1333480918158254082" class="uri">https://twitter.com/tladeras/status/1333480918158254082</a></td>
 </tr>
 <tr class="even">
 <td align="left">02/12/2020 06:43:45</td>
 <td align="left">sleepydatum</td>
 <td align="left">anti_join()</td>
 <td align="left">dplyr::anti_join() is my personal favorite.</td>
-<td align="left"><a href="https://twitter.com/sleepydatum/status/1334010344704905216" class="uri">https://twitter.com/sleepydatum/status/1334010344704905216</a></td>
-<td align="left"><a href="https://twitter.com/tladeras/status/1333480918158254082" class="uri">https://twitter.com/tladeras/status/1333480918158254082</a></td>
 </tr>
 <tr class="odd">
 <td align="left">02/12/2020 01:19:24</td>
 <td align="left">dragonflystats</td>
 <td align="left"></td>
 <td align="left">out of curiosity - who are the students? CS? Health Science?</td>
-<td align="left"><a href="https://twitter.com/dragonflystats/status/1333928718172098560" class="uri">https://twitter.com/dragonflystats/status/1333928718172098560</a></td>
-<td align="left"><a href="https://twitter.com/tladeras/status/1333480918158254082" class="uri">https://twitter.com/tladeras/status/1333480918158254082</a></td>
 </tr>
 <tr class="even">
 <td align="left">02/12/2020 01:22:25</td>
 <td align="left">tladeras</td>
 <td align="left"></td>
 <td align="left">Biostatistics students.</td>
-<td align="left"><a href="https://twitter.com/tladeras/status/1333929477496205312" class="uri">https://twitter.com/tladeras/status/1333929477496205312</a></td>
-<td align="left"><a href="https://twitter.com/tladeras/status/1333480918158254082" class="uri">https://twitter.com/tladeras/status/1333480918158254082</a></td>
 </tr>
 <tr class="odd">
 <td align="left">01/12/2020 19:15:14</td>
 <td align="left">eulerdiditfirst</td>
 <td align="left"></td>
 <td align="left">Writing your own tidy verse functions from chaining tidy verse functions using {{}} . Seriously feels like a super power sometimes</td>
-<td align="left"><a href="https://twitter.com/eulerdiditfirst/status/1333837073636274176" class="uri">https://twitter.com/eulerdiditfirst/status/1333837073636274176</a></td>
-<td align="left"><a href="https://twitter.com/tladeras/status/1333480918158254082" class="uri">https://twitter.com/tladeras/status/1333480918158254082</a></td>
 </tr>
 <tr class="even">
 <td align="left">01/12/2020 18:34:13</td>
 <td align="left">pedro_tfonseca</td>
 <td align="left"></td>
 <td align="left">dplyr::near is one of my favorite</td>
-<td align="left"><a href="https://twitter.com/pedro_tfonseca/status/1333826750749487105" class="uri">https://twitter.com/pedro_tfonseca/status/1333826750749487105</a></td>
-<td align="left"><a href="https://twitter.com/tladeras/status/1333480918158254082" class="uri">https://twitter.com/tladeras/status/1333480918158254082</a></td>
 </tr>
 <tr class="odd">
 <td align="left">01/12/2020 18:28:52</td>
 <td align="left">daniellequinn88</td>
 <td align="left">uncount()</td>
 <td align="left">dplyr::uncount(); tidyr::complete(); tidyr::fill() / replace_na(); stringr::str_detect() / str_which(); lubridate::ymd_hms() and related functions; ggplot2::labs() - so simple, yet under appreciated!</td>
-<td align="left"><a href="https://twitter.com/daniellequinn88/status/1333825406739345410" class="uri">https://twitter.com/daniellequinn88/status/1333825406739345410</a></td>
-<td align="left"><a href="https://twitter.com/tladeras/status/1333480918158254082" class="uri">https://twitter.com/tladeras/status/1333480918158254082</a></td>
 </tr>
 <tr class="even">
 <td align="left">01/12/2020 18:28:52</td>
 <td align="left">daniellequinn88</td>
 <td align="left">complete()</td>
 <td align="left">dplyr::uncount(); tidyr::complete(); tidyr::fill() / replace_na(); stringr::str_detect() / str_which(); lubridate::ymd_hms() and related functions; ggplot2::labs() - so simple, yet under appreciated!</td>
-<td align="left"><a href="https://twitter.com/daniellequinn88/status/1333825406739345410" class="uri">https://twitter.com/daniellequinn88/status/1333825406739345410</a></td>
-<td align="left"><a href="https://twitter.com/tladeras/status/1333480918158254082" class="uri">https://twitter.com/tladeras/status/1333480918158254082</a></td>
 </tr>
 <tr class="odd">
 <td align="left">01/12/2020 18:28:52</td>
 <td align="left">daniellequinn88</td>
 <td align="left">fill()</td>
 <td align="left">dplyr::uncount(); tidyr::complete(); tidyr::fill() / replace_na(); stringr::str_detect() / str_which(); lubridate::ymd_hms() and related functions; ggplot2::labs() - so simple, yet under appreciated!</td>
-<td align="left"><a href="https://twitter.com/daniellequinn88/status/1333825406739345410" class="uri">https://twitter.com/daniellequinn88/status/1333825406739345410</a></td>
-<td align="left"><a href="https://twitter.com/tladeras/status/1333480918158254082" class="uri">https://twitter.com/tladeras/status/1333480918158254082</a></td>
 </tr>
 <tr class="even">
 <td align="left">01/12/2020 18:28:52</td>
 <td align="left">daniellequinn88</td>
 <td align="left">replace_na()</td>
 <td align="left">dplyr::uncount(); tidyr::complete(); tidyr::fill() / replace_na(); stringr::str_detect() / str_which(); lubridate::ymd_hms() and related functions; ggplot2::labs() - so simple, yet under appreciated!</td>
-<td align="left"><a href="https://twitter.com/daniellequinn88/status/1333825406739345410" class="uri">https://twitter.com/daniellequinn88/status/1333825406739345410</a></td>
-<td align="left"><a href="https://twitter.com/tladeras/status/1333480918158254082" class="uri">https://twitter.com/tladeras/status/1333480918158254082</a></td>
 </tr>
 </tbody>
 </table>
@@ -2063,7 +2039,7 @@ knitr::kable(cleaned_tweets)</code></pre>
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#akkfxzivux .gt_table {
+#eymbarolgm .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -2088,7 +2064,7 @@ knitr::kable(cleaned_tweets)</code></pre>
   border-left-color: #D3D3D3;
 }
 
-#akkfxzivux .gt_heading {
+#eymbarolgm .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -2100,7 +2076,7 @@ knitr::kable(cleaned_tweets)</code></pre>
   border-right-color: #D3D3D3;
 }
 
-#akkfxzivux .gt_title {
+#eymbarolgm .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -2110,7 +2086,7 @@ knitr::kable(cleaned_tweets)</code></pre>
   border-bottom-width: 0;
 }
 
-#akkfxzivux .gt_subtitle {
+#eymbarolgm .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -2120,13 +2096,13 @@ knitr::kable(cleaned_tweets)</code></pre>
   border-top-width: 0;
 }
 
-#akkfxzivux .gt_bottom_border {
+#eymbarolgm .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#akkfxzivux .gt_col_headings {
+#eymbarolgm .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -2141,7 +2117,7 @@ knitr::kable(cleaned_tweets)</code></pre>
   border-right-color: #D3D3D3;
 }
 
-#akkfxzivux .gt_col_heading {
+#eymbarolgm .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -2161,7 +2137,7 @@ knitr::kable(cleaned_tweets)</code></pre>
   overflow-x: hidden;
 }
 
-#akkfxzivux .gt_column_spanner_outer {
+#eymbarolgm .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -2173,15 +2149,15 @@ knitr::kable(cleaned_tweets)</code></pre>
   padding-right: 4px;
 }
 
-#akkfxzivux .gt_column_spanner_outer:first-child {
+#eymbarolgm .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#akkfxzivux .gt_column_spanner_outer:last-child {
+#eymbarolgm .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#akkfxzivux .gt_column_spanner {
+#eymbarolgm .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -2193,7 +2169,7 @@ knitr::kable(cleaned_tweets)</code></pre>
   width: 100%;
 }
 
-#akkfxzivux .gt_group_heading {
+#eymbarolgm .gt_group_heading {
   padding: 8px;
   color: #333333;
   background-color: #FFFFFF;
@@ -2215,7 +2191,7 @@ knitr::kable(cleaned_tweets)</code></pre>
   vertical-align: middle;
 }
 
-#akkfxzivux .gt_empty_group_heading {
+#eymbarolgm .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -2230,15 +2206,15 @@ knitr::kable(cleaned_tweets)</code></pre>
   vertical-align: middle;
 }
 
-#akkfxzivux .gt_from_md > :first-child {
+#eymbarolgm .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#akkfxzivux .gt_from_md > :last-child {
+#eymbarolgm .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#akkfxzivux .gt_row {
+#eymbarolgm .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -2257,7 +2233,7 @@ knitr::kable(cleaned_tweets)</code></pre>
   overflow-x: hidden;
 }
 
-#akkfxzivux .gt_stub {
+#eymbarolgm .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -2269,7 +2245,7 @@ knitr::kable(cleaned_tweets)</code></pre>
   padding-left: 12px;
 }
 
-#akkfxzivux .gt_summary_row {
+#eymbarolgm .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -2279,7 +2255,7 @@ knitr::kable(cleaned_tweets)</code></pre>
   padding-right: 5px;
 }
 
-#akkfxzivux .gt_first_summary_row {
+#eymbarolgm .gt_first_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -2289,7 +2265,7 @@ knitr::kable(cleaned_tweets)</code></pre>
   border-top-color: #D3D3D3;
 }
 
-#akkfxzivux .gt_grand_summary_row {
+#eymbarolgm .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -2299,7 +2275,7 @@ knitr::kable(cleaned_tweets)</code></pre>
   padding-right: 5px;
 }
 
-#akkfxzivux .gt_first_grand_summary_row {
+#eymbarolgm .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -2309,11 +2285,11 @@ knitr::kable(cleaned_tweets)</code></pre>
   border-top-color: #D3D3D3;
 }
 
-#akkfxzivux .gt_striped {
+#eymbarolgm .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#akkfxzivux .gt_table_body {
+#eymbarolgm .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -2322,7 +2298,7 @@ knitr::kable(cleaned_tweets)</code></pre>
   border-bottom-color: #D3D3D3;
 }
 
-#akkfxzivux .gt_footnotes {
+#eymbarolgm .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -2336,13 +2312,13 @@ knitr::kable(cleaned_tweets)</code></pre>
   border-right-color: #D3D3D3;
 }
 
-#akkfxzivux .gt_footnote {
+#eymbarolgm .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding: 4px;
 }
 
-#akkfxzivux .gt_sourcenotes {
+#eymbarolgm .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -2356,46 +2332,46 @@ knitr::kable(cleaned_tweets)</code></pre>
   border-right-color: #D3D3D3;
 }
 
-#akkfxzivux .gt_sourcenote {
+#eymbarolgm .gt_sourcenote {
   font-size: 90%;
   padding: 4px;
 }
 
-#akkfxzivux .gt_left {
+#eymbarolgm .gt_left {
   text-align: left;
 }
 
-#akkfxzivux .gt_center {
+#eymbarolgm .gt_center {
   text-align: center;
 }
 
-#akkfxzivux .gt_right {
+#eymbarolgm .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#akkfxzivux .gt_font_normal {
+#eymbarolgm .gt_font_normal {
   font-weight: normal;
 }
 
-#akkfxzivux .gt_font_bold {
+#eymbarolgm .gt_font_bold {
   font-weight: bold;
 }
 
-#akkfxzivux .gt_font_italic {
+#eymbarolgm .gt_font_italic {
   font-style: italic;
 }
 
-#akkfxzivux .gt_super {
+#eymbarolgm .gt_super {
   font-size: 65%;
 }
 
-#akkfxzivux .gt_footnote_marks {
+#eymbarolgm .gt_footnote_marks {
   font-style: italic;
   font-size: 65%;
 }
 </style>
-<div id="akkfxzivux" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
+<div id="eymbarolgm" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;"><table class="gt_table">
   
   <thead class="gt_col_headings">
     <tr>
