--- a/content/projects/tidyverse_functions/index.html
+++ b/content/projects/tidyverse_functions/index.html
@@ -594,7 +594,7 @@ knitr::kable(parsed_tweets[1:10,-c(5:6)])</code></pre>
 <td align="right">0.0045045</td>
 </tr>
 <tr class="even">
-<td align="left">drop_na</td>
+<td align="left">drop_na()</td>
 <td align="right">1</td>
 <td align="right">0.0037594</td>
 <td align="right">0.0045045</td>
@@ -666,7 +666,7 @@ knitr::kable(parsed_tweets[1:10,-c(5:6)])</code></pre>
 <td align="right">0.0045045</td>
 </tr>
 <tr class="even">
-<td align="left">group_</td>
+<td align="left">group_*()</td>
 <td align="right">1</td>
 <td align="right">0.0037594</td>
 <td align="right">0.0045045</td>
@@ -1281,12 +1281,12 @@ knitr::kable(parsed_tweets[1:10,-c(5:6)])</code></pre>
 <td align="left">1/12/2020 14:12</td>
 <td align="left"><a href="https://twitter.com/InflationSquare/status/1333760840995049472">InflationSquare</a></td>
 <td align="left">dense_rank()</td>
-<td align="left">%<span class="math inline">\(% makes using paste() easier (among other things). ; I use %T&amp;gt;% View() at the end of %&amp;gt;% chains a lot as well.; dplyr::dense_rank() is another good one that I wouldn&#39;t have come across if I didn&#39;t know the SQL equivalent.; dplyr::group_[keys, rows, indices] are neat as well | |1/12/2020 14:12 |[InflationSquare](https://twitter.com/InflationSquare/status/1333760840995049472) |group_ |%\)</span>% makes using paste() easier (among other things). ; I use %T&gt;% View() at the end of %&gt;% chains a lot as well.; dplyr::dense_rank() is another good one that I wouldn’t have come across if I didn’t know the SQL equivalent.; dplyr::group_[keys, rows, indices] are neat as well</td>
+<td align="left">%<span class="math inline">\(% makes using paste() easier (among other things). ; I use %T&amp;gt;% View() at the end of %&amp;gt;% chains a lot as well.; dplyr::dense_rank() is another good one that I wouldn&#39;t have come across if I didn&#39;t know the SQL equivalent.; dplyr::group_[keys, rows, indices] are neat as well | |1/12/2020 14:12 |[InflationSquare](https://twitter.com/InflationSquare/status/1333760840995049472) |group_*() |%\)</span>% makes using paste() easier (among other things). ; I use %T&gt;% View() at the end of %&gt;% chains a lot as well.; dplyr::dense_rank() is another good one that I wouldn’t have come across if I didn’t know the SQL equivalent.; dplyr::group_[keys, rows, indices] are neat as well</td>
 </tr>
 <tr class="odd">
 <td align="left">1/12/2020 14:10</td>
 <td align="left"><a href="https://twitter.com/PRLPoliSci/status/1333760492221902850">PRLPoliSci</a></td>
-<td align="left">drop_na</td>
+<td align="left">drop_na()</td>
 <td align="left">A lot of great ones in the thread so far! I’d also toss in <code>drop_na</code></td>
 </tr>
 <tr class="even">
