--- a/content/projects/tidyverse_functions/index.html
+++ b/content/projects/tidyverse_functions/index.html
@@ -2606,6 +2606,15 @@ knitr::kable(parsed_tweets[1:10,-c(5:6)])</code></pre>
 </tbody>
 </table>
 </div>
+<div id="source-code-and-data" class="section level2">
+<h2>Source Code and Data</h2>
+<p>Feel free to use and modify.</p>
+<ul>
+<li><a href="index.Rmd">RMarkdown file</a> used to generate this post</li>
+<li><a href="https://github.com/gmellini/twitter-scraper">Python Twitter Scraper (by Giovanni Mellini)</a> - I used this because there wasn’t a ready made recipe in <code>rtweet</code> to extract replies - you have to use recursion to extract all of the thread replies that belong to a tweet, and this was easily modifiable.</li>
+<li><a href="cleaned_tweets.csv">Cleaned Tweets File (CSV)</a></li>
+</ul>
+</div>
 <div id="thank-you" class="section level2">
 <h2>Thank You</h2>
 <p>This post is my thank you for everyone who contributed to this thread. Thank you!</p>
